--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 .video {
     display: flex;
     border: green solid;
@@ -9,16 +8,14 @@
 
 header {
 
-
-
-    justify-content: space-around;
+    background-color: #F7C6C7;
     display: flex;
     align-items: center;
-    background-color: #F2C95D;
-
+    justify-content: space-around;
+    
     font-family: "Playfair Display", serif;
     font-optical-sizing: auto;
-    font-weight: 500px;
+    font-weight: 600;
     font-style: normal;
 }
 
@@ -53,12 +50,13 @@ nav a {
     padding: 1rem;
     text-decoration: none;
     margin-right: 40px;
+    color:#333333 ;
 
 }
 
 .carrito i {
 
-    color: #D63434;
+    color:#F23C3C;
     font-size: 1rem;
     border-radius: 6px;
     padding: 1rem;
@@ -66,59 +64,65 @@ nav a {
 }
 
 .productos {
-    display:grid;
-   
-    grid-template-columns: repeat(3,1fr);
+    display: grid;
+
+    grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 3fr 3fr;
-    gap:2rem;
+    gap: 2rem;
     justify-items: center;
     margin-top: 10%;
     margin-left: 5%;
     margin-right: 5%;
-    background-color:#EDE6DD;
+    background-color:rgba(217, 217, 217, 1.0);
 
 }
 
 .productos article {
-   
+
     display: flex;
     flex-direction: column;
-    justify-content:space-between;
+    justify-content: space-between;
     align-items: center;
-    border: 20px #D63434 solid;
+    border: 2px #F23C3C solid;
     font-family: "Instrument Serif", serif;
-    color: #2E2E2E;
+    color:#333333;
     font-weight: 50px;
     padding: 5%;
-        
+    border-radius: 15px;
+
 }
-    .card {
 
-        width: 60%;
-        background-color: #F2B705;
-        overflow: visible;
-        margin: 7px green solid;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+.card {
+
+    width: 60%;
+    background-color: #E6D3B3;
+    overflow: visible;
+    margin: 7px green solid;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
 
-    }
+}
 
-.botonCarrito{
-    display:flex;
-    justify-content:center;
-    border: 2px green solid;
+.botonCarrito {
+
+    background-color: #F7F7F7;
+    
     align-items: center;
 }
-.boton{
-    width: 80%;
+
+.boton {
+    width: 100%;
+    color: #D63434;
+    border-radius: 8px;
 }
+
 .card h2,
 .card img,
 .card p {
-    border: blue solid;
-   
+    border: 10px rgba(253, 242, 177, 1.0);
+
 
 }
 
@@ -128,7 +132,6 @@ nav a {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    margin: 10% red solid;
     border-radius: 15px;
 
 
@@ -144,16 +147,16 @@ nav a {
 
 
 body {
-    background-color: #B0B0B0;
-    
-    
+    background-color:rgba(208, 240, 192, 1.0);
+
+
 }
 
 footer {
-    width:100%;
+    width: 100%;
     height: 10%;
     padding: 2px;
-    background-color:#F2B705;
+    background-color:#F7C6C7;
     color: white;
     padding: 20px;
     text-align: center;
@@ -169,26 +172,28 @@ footer {
 
 .redes div {
 
-    width: 10%;
-    height: 10%;
+    width: 4%;
+    height: 20%;
     font-size: 200%;
-    background-color: aquamarine;
+    background-color:rgba(253, 242, 177, 1.0);
     border-radius: 100%;
-    padding: 50px red solid;
     margin: 5px;
-
 }
 
+.fa-instagram,
+.fa-whatsapp,
+.fa-facebook-f{
+    padding: 10px;
+    background-color:#333333 solid;
+}
 
 .gps iframe {
-     width: 10%;
+    width: 10%;
 }
 
 .logo1 img {
 
     /* padding: 1rem; */
     width: 7%;
-    
-
     align-items: center;
 }
