--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,25 @@
-.video {
+/* .video {
     display: flex;
     border: green solid;
 
     width: 90%;
     height: auto;
+} */
+*{
+  box-sizing: border-box;
 }
-
 header {
 
     background-color: #F7C6C7;
     display: flex;
     align-items: center;
-
+    box-shadow: 0 4px 12px rgba(244, 243, 240, 1.0);
     justify-content: space-around;
     position: fixed;
     z-index:initial;
     font-family: "Playfair Display", serif;
     font-optical-sizing: auto;
-    font-weight: 600;
+    font-weight: 600px;
     font-style: normal;
 }
 
@@ -43,7 +45,6 @@ nav ul {
     /*border: green solid;*/
     padding: 1rem;
     display: flex;
-    display: center;
     list-style: none;
     justify-content: center;
 
@@ -69,8 +70,9 @@ nav a {
 
 .productos {
     display: grid;
-
-    grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+    box-shadow: 0 4px 12px rgba(244, 243, 240, 1.0);
+    /* grid-template-columns: repeat(auto-fit, minmax(270px, 1fr)); */
+    grid-template-columns: repeat(3,1fr);
     grid-template-rows: 3fr 3fr;
     gap: 2rem;
     justify-items: center;
@@ -79,6 +81,9 @@ nav a {
     margin-left: 5%;
     margin-right: 5%;
     background-color:rgba(253, 242, 177, 1.0);
+    padding: 5%;
+    border: 0;
+    border-radius: 20px;
  
 
 }
@@ -95,7 +100,7 @@ nav a {
     font-weight: 50px;
     padding: 5%;
     border-radius: 15px;
-
+    box-shadow: 0 4px 12px rgba(244, 243, 240, 1.0);
 }
 
 .card {
@@ -136,16 +141,13 @@ nav a {
 
 }
 
-
 .card img {
 
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 15px;
-
-
-
+    
 }
 
 .gps {
@@ -154,12 +156,9 @@ nav a {
     height: auto;
 }
 
-
-
 body {
     background-color:rgba(208, 240, 192, 1.0);
-
-
+    
 }
 
 footer {
@@ -170,24 +169,8 @@ footer {
     color: white;
     padding: 20px;
     text-align: center;
-}
-
-.redes {
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-}
-
-.redes div {
-
-    width: 4%;
-    height: 20%;
-    font-size: 200%;
-    background-color:rgba(253, 242, 177, 1.0);
-    border-radius: 100%;
-    margin: 5px;
+    border:0;
+    border-radius: 20px;
 }
 
 .fa-instagram,
@@ -197,29 +180,18 @@ footer {
     background-color:#333333 solid;
 }
 
-.gps iframe {
-    width: 10%;
-}
-
-.logo1 img {
-
-    /* padding: 1rem; */
-    width: 7%;
-    align-items: center;
-}
-
 .footerContacto{
     
-    max-height: 100vh;
-    overflow-y: auto;
-    display: grid;
+  max-height: 100vh;
+  overflow-y: auto;
+  display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 2rem;
   padding: 2rem;
   background-color: #E6D3B3;
   color: #333333;
-  align-items: start; /* Alinea el contenido arriba */
-  max-height: 100vh; /* No excede la altura de la pantalla */
+  align-items: start; 
+  max-height: 100vh; 
   box-sizing: border-box;
 }
 .nfooter{
@@ -228,7 +200,7 @@ footer {
   gap: 1.5rem;
 }
 .logoFooter img {
-  width: 150px; /* Tamaño más manejable */
+  width: 150px; 
 }
 
 .redesFooter a {
@@ -266,7 +238,6 @@ footer {
 iframe{
     border: 5px solid ;
 }
-
 
 .footerContacto > div:last-child {
   grid-column: span 2;
@@ -326,4 +297,142 @@ iframe{
 
 .formularioCaja button:hover {
   background-color: #D0F0C0;
+}
+@media(max-width: 768px){
+      
+  
+  .logo img{
+
+    /* padding: 1rem; */
+    width: 35%;
+    
+    margin-left: 30px;
+
+    align-items: center;
+}
+  nav a {
+    /*border: red solid;*/
+    padding: 1rem;
+    text-decoration: none;
+    margin-right: 10px;
+    color:#333333 ;
+
+}
+.productos {
+    display: grid;
+    box-shadow: 0 4px 12px rgba(244, 243, 240, 1.0);
+    /* grid-template-columns: repeat(auto-fit, minmax(270px, 1fr)); */
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: 3fr 3fr;
+    gap: 2rem;
+    justify-items: center;
+    margin-top: 10%;
+    margin-bottom: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
+    background-color:rgba(253, 242, 177, 1.0);
+ 
+
+}
+main {
+    margin-left: 4%;
+    margin-right: 4%;
+    padding-top: 8%;
+   
+    
+}
+.footerContacto{
+    
+  max-height: 100vh;
+  overflow-y: auto;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 2rem;
+  padding: 2rem;
+  background-color: #E6D3B3;
+  color: #333333;
+  align-items: start; 
+  max-height: 100vh; 
+  box-sizing: border-box;
+  text-align: center;
+}
+.nfooter,
+.mapaFooter{
+   display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.redesFooter a {
+  margin-right: 1rem;
+  font-size: 1.5rem;
+  color: #333333;
+  text-decoration: none;
+}
+.mapaFooter iframe{
+  width: 100%;
+}
+}
+@media(max-width: 480px){
+
+  header {
+
+    background-color: #F7C6C7;
+    display: flex;
+    flex-wrap: center;
+    align-items: center;
+    box-shadow: 0 4px 12px rgba(244, 243, 240, 1.0);
+    justify-content: space-around;
+    position: fixed;
+    z-index:10;
+    font-family: "Playfair Display", serif;
+    font-optical-sizing: auto;
+    font-weight: 4px
+    font-style: normal;
+}
+  .logo img {
+    width: 30%;
+    margin-left: 15px;
+  }
+
+  .carrito i {
+    padding: 0.5rem;
+    margin-right: 15px;
+    font-size: 0.9rem;
+  }
+
+nav ul {
+  
+    padding:0;
+}
+  nav a {
+    margin-right: 10px;
+    padding: 0.5rem;
+    font-size: 0.85rem;
+  }
+
+
+.productos {
+    display: grid;
+    box-shadow: 0 4px 12px rgba(244, 243, 240, 1.0);
+    /* grid-template-columns: repeat(auto-fit, minmax(270px, 1fr)); */
+    grid-template-columns: repeat(1,1fr);
+    grid-template-rows: 3fr 3fr;
+    gap: 2rem;
+    justify-items: center;
+    margin-top: 10%;
+    margin-bottom: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
+    background-color:rgba(253, 242, 177, 1.0);
+ 
+
+}
+main {
+    margin-left: 1;
+    margin-right: 1;
+    padding-top: 8%;
+   
+    
+}
 }
